virtual thread solve problem